<resources>
    <string name="app_name">CapstoneProduct</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_investor">Investor</string>
    <string name="title_umkm">UMKM</string>
    <string name="title_profile">Profile</string>
    <string name="name_title">InvestConnect</string>
    <string name="title_status">Status</string>
    <string name="tv_name">Name</string>
    <string name="tv_sector">Sector</string>
    <string name="tv_title_sector">Sector</string>
    <string name="tv_title_stages">Stages</string>
    <string name="tv_title_thesis">Thesis</string>
    <string name="tv_title_deals">Total Deals</string>
    <string name="tv_title_investments">Total Investments</string>
    <string name="tv_title_dealType">Deal Type</string>
    <string name="tv_title_geographic">Geographic Focus</string>
    <string name="tv_title_criteria">Criteria</string>
    <string name="btn_deal">Make a Deal</string>
    <string name="tv_title_location">Location</string>
    <string name="tv_title_date">Founding Date</string>
    <string name="tv_title_description">Description</string>
    <string name="tv_title_founder">Founder Name</string>
    <string name="tv_title_seeking">Amount Seeking</string>
    <string name="tv_title_investType">Preferred Investment Type</string>
    <string name="tv_title_useFunds">Intended Use of Funds</string>
    <string name="tv_title_offer">Enter the amount you are offering</string>
    <string name="enter_amount">Enter amount</string>
    <string name="btn_deal2">Lets deal!</string>
    <string name="example_input">Input must be in integers, example: \"1000000\"</string>
    <string name="title_welcome_page">Welcome to InvestConnect!</string>
    <string name="message_welcome_page">Ready to invest?</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="pilih_umkmatauinvestor">Pilih UMKM atau Investor</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini!</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="phone">Contact Number</string>
    <string name="phone_number_hint">Example: 0811223445</string>
    <string name="type">Type</string>
    <string name="company">Company Name</string>
    <string name="example_input2">Example: 5000000</string>
    <string name="title_investor_name">Investor Name</string>
    <string name="tv_investment_focus">Investment Focus/Sector</string>
    <string name="title_login_page">Sudah siap untuk memasuki InvestConnect?</string>
    <string name="message_login_page">Masukkan datamu!</string>
    <string name="logout">Logout</string>
    <string name="upload">Upload</string>
    <string name="gallery">Gallery</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="addButton">Add Button</string>
    <string name="request_offer">Incoming Offering</string>
    <string name="send_offer">Sent Offering</string>
    <string name="company_name">Company name</string>
    <string name="team_members">Team Members</string>
    <string name="business_model">Business Model</string>
    <string name="loyal_customers">Loyal Customers</string>
    <string name="market_size">Market Size</string>
    <string name="market_target">Market Target</string>
    <string name="amount_seeking">Amount Seeking</string>
    <string name="funding_raised">Founding Raised</string>
    <string name="revenue">Revenue</string>
    <string name="profitability">Profitability</string>
    <string name="growth_rate">Growth Rate</string>
    <string name="preferred_investment_type">Preffered Investment Type</string>
    <string name="intended_use_of_funds">Intended Use of Funds</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_home_welcome">Welcome to\nInvestConnect!</string>
    <string name="tv_home_desc"> InvestConnect is a platform designed to bridge the gap between investors\nand Small and Medium Enterprises (UMKM) in Indonesia, facilitating access to capital for start-ups and
investment opportunities for investors. </string>
    <string name="kania">KaniaAdrina</string>
    <string name="kaniaadrina">kaniaadrina@gmail.com</string>
</resources>